时间控件修改

--- a/scripts/components/tools/fmTimeComponent/fmdateTimerDouble.html
+++ b/scripts/components/tools/fmTimeComponent/fmdateTimerDouble.html
@@ -459,7 +459,7 @@
                 <span class="col-xs-4 col-md-3 col-lg-3 time-name">开始时间 </span>
 
                 <div class="input-group col-xs-7 col-md-8 col-lg-9">
-                    <input type="text" class="select-time" ng-click="selectTime($event)" ng-model="begin_time"
+                    <input type="text" class="select-time" ng-click="selectTime($event)" ng-model="begin_time2"
                            placeholder="开始时间" readonly>
                 </div>
                 <!-- <span class="empty-time" date-model-name="begin_time">×</span> -->
@@ -468,7 +468,7 @@
                 <span class="col-xs-4 col-md-3 col-lg-3 time-name">结束时间 </span>
 
                 <div class="input-group col-xs-7 col-md-8 col-lg-9">
-                    <input type="text" class="select-time" ng-click="selectTime($event)" ng-model="end_time"
+                    <input type="text" class="select-time" ng-click="selectTime($event)" ng-model="end_time2"
                            placeholder="结束时间" readonly>
                 </div>
                 <!-- <span class="empty-time" date-model-name="end_time">×</span> -->
@@ -501,7 +501,7 @@
                     选择
                   </span>
                         <input type="text" class="select-time select-time-add" ng-click="selectTime($event)"
-                               ng-model="d_begin_time" placeholder="开始" readonly>
+                               ng-model="d_begin_time2" placeholder="开始" readonly>
                     </div>
                 </div>
                 <div class="time-select">
@@ -518,7 +518,7 @@
                     选择
                   </span>
                         <input type="text" class="select-time select-time-add" ng-click="selectTime($event)"
-                               ng-model="d_end_time" placeholder="结束" readonly>
+                               ng-model="d_end_time2" placeholder="结束" readonly>
                     </div>
                 </div>
             </div>
@@ -535,7 +535,7 @@
                     </select>
                   </span>
                         <input type="text" class="select-time select-time-after" ng-click="selectTime($event)"
-                               ng-model="w_begin_time" placeholder="时间" readonly>
+                               ng-model="w_begin_time2" placeholder="时间" readonly>
                     </div>
                 </div>
                 <div class="time-select">
@@ -549,7 +549,7 @@
                     </select>
                   </span>
                         <input type="text" class="select-time select-time-after" ng-click="selectTime($event)"
-                               ng-model="w_end_time" placeholder="时间" readonly>
+                               ng-model="w_end_time2" placeholder="时间" readonly>
                     </div>
                 </div>
             </div>
